config.template/apache/apache-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/ip_whitelist: <ip_of_client_1> <ip_of_client_2>
  labels:
    app: apache-dashboard
  name: apache-dashboard
spec:
  host: flink-dashboard.apps.dcw1.paas.psnc.pl
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: apache-dashboard
    weight: 100
  wildcardPolicy: None
